[bdist_wheel]
universal = 1

[metadata]
description-file = README.rst
license_file = LICENSE

[tool:pytest]
addopts = --cov=pennsieve --cov-report=term --cov-report=html
testpaths = tests

[coverage:run]
source = pennsieve
omit = pennsieve/cli/*

[isort]
line_length = 88
use_parentheses = True
include_trailing_comma = True
multi_line_output = 3
known_future_library=builtins,future,__future__
